# iam-repo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
math_engine/: calculate_magnitude.cpp  cosine_similarity.cpp  dot_product.cpp  math_engine.h  matrix.h
search_engine/: search_engine.cpp  search_engine.h
sorting_engine/: find_min_element_and_index.cpp  merge_sorting_engine.cpp  sorting_engine.cpp  sorting_engine.h
